+ toolchains configuration in order to run maven with different than the default jdk (16) ++ java version to 16 (with ugly workarounds for lombok)